terraform/networking.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr

    tags = {
    Name = "rds-taipy-vpc"
    managed_by = "terraform"
    }
}

# Associar a tabela de rotas pública como a tabela principal da VPC
resource "aws_main_route_table_association" "main_rt_assoc" {
    vpc_id = aws_vpc.main.id
    route_table_id = aws_route_table.public_rt.id
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id

    tags = {
    Name = "rds-taipy-igw"
    managed_by = "terraform"
    }
}

# Sub-rede pública na AZ us-east-2a
resource "aws_subnet" "public_a" {
 vpc_id = aws_vpc.main.id
 cidr_block = var.public_subnet_cidr_a
 availability_zone = "us-east-2a"
 map_public_ip_on_launch = true

 tags = {
    Name = "public-subnet-a"
    managed_by = "terraform"
    }
}

# Sub-rede pública na AZ us-east-2b
resource "aws_subnet" "public_b" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr_b
    availability_zone = "us-east-2b"
    map_public_ip_on_launch = true

    tags = {
    Name = "public-subnet-b"
    managed_by = "terraform"
    }
}

# Sub-rede Privada na AZ us-east-2a
resource "aws_subnet" "private_a" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr_a
    availability_zona = "us-east-2a"

    tags = {
    Name = "private-subnet-a"
    managed_by = "terraform"
    }
}

# Sub-rede Privada na AZ us-east-2b
resource "aws_subnet" "private_b" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr_b
    availability_zone = "us-east-2b"

    tags = {
    Name = "private-subnet-b"
    }
}

resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
        }

        tags = {
        Name = "rds-taipy-public-route-table"
        managed_by = "terraform"
        }
    
    tags = {
    Name = "rds-taipy-public-route-table"
    managed_by = "terraform"
    }
}

resource "aws_route_table_association" "public_assoc_a" {
    subnet_id = aws_subnet.public_a.id
    route_table_id = aws_route_table.puclic_rt.id
    }

resource "aws_route_table_association" "public_assoc_b" {
    subnet_id = aws_subnet.publick_b.id
    route_table_id = aws_route_table.public_rt.id
    }

# VPC Endpoint para S3
resource "aws_vpc_endpoint" "s3" {
    vpc_id = aws_vps.main.id
    service_name = "com.amazonaws.${var.aws_region}.s3"
    route_table_ids = [aws_route_table.public_rt.id]

    policy = jsonencode({
    "Version" : "2012-10-17",
    "Statement" : [{
    "Effect" : "Allow",
    "Principal" : "*",
    "Action" : "s3.*",
    "Resource" : "*"
    }]
    })

    tags = {
    Name = "s3-endpoint"
    managed_by = "terraform"
    }
    }
